
[package]
name = "isONclust3"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/aljpetri/isONclust3"
license = "GPL3.0"
description = "Rust implementation of a novel de novo clustering algorithm. isONclust3 is a tool for clustering either PacBio Iso-Seq reads, or Oxford Nanopore reads into clusters, where each cluster represents all reads that came from a gene family. Output is a tsv file with each read assigned to a cluster-ID and a folder 'fastq' containing one fastq file per cluster generated. Detailed information is available in the isONclust3 paper."

[dependencies]
bio = "1"
bio-seq = "0.14.8"
clap = { version = "4.5.54", features = ["derive", "cargo"] }
clap-cargo = "0.18.3"
rayon = "1.11.0"
memory-stats = "1.2.0"
# Check this, version 2 might be breaking
rustc-hash = "2.1.0"
minimizer-iter = "1.2.1"
nohash-hasher = "0.2.0"
log = "0.4.29"
simple_logger = "5.1.0"
